user-select issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -1098,6 +1098,7 @@ footer .info {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    user-select: none;
   }
 
   ul.active {
